flux/apps/utilities/corporate-davmail/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: corporate-davmail
    namespace: davmail
spec:
    selector:
        app: corporate-davmail
    ports:
        - name: xpra-web
          port: 14500
          targetPort: 14500
        - name: imap
          port: 1143
          targetPort: 1143
        - name: smtp
          port: 1025
          targetPort: 1025
        - name: caldav
          port: 1080
          targetPort: 1080
        - name: ldap
          port: 1389
          targetPort: 1389
    clusterIP: Loadbalancer
