flux/apps/utilities/corporate-davmail/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: davmail
    namespace: davmail
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "davmail.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: corporate-davmail
                port: 14500
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: davmail-caldav
    namespace: davmail
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "davmail-caldav.internal.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: corporate-davmail
                port: 1080
